--- a/.env-example
+++ b/.env-example
@@ -1,7 +1,7 @@
 DATABASE_URL=postgres://{username}:{password}@{postgres_host}:5432/{Database}
 
 NEXTAUTH_SECRET=
-NEXTAUTH_URL=http://192.168.1.112:3000
+NEXTAUTH_URL=http://{host_ip}:3000
 
 DISCORD_CLIENT_ID=
 DISCORD_CLIENT_SECRET=
